# serial_whisper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: byte_order.h  motoilet_whisper.h  motoilet_whisper_data_layer.h  motoilet_whisper_driver.h  motoilet_whisper_message.h  motoilet_whisper_transmission_layer.h
src/main/: app_layer.c  app_layer.h  crc.c  crc.h  data_layer.c  data_layer.h  motoilet_whisper.c  motoilet_whisper_message.c  transmission_layer.c
src/test/: app_layer_test.c  byte_order.h  data_layer_driver_mock.c  data_layer_driver_mock.h  data_layer_mock.c  data_layer_mock.h  data_layer_test.c  driver_mock.c  driver_mock.h  transmission_layer_test.c
